<resources>
    <string name="app_name">Taxi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="msg_location_permission">We need you location to show closer taxis</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_history">History</string>
    <string name="navigation_drawer_profile">Profile</string>
    <string name="navigation_drawer_rates">Rates</string>
    <string name="navigation_drawer_contacts">Contacts</string>
    <string name="navigation_drawer_sign_out">Sign out</string>
    <string name="prompt_where_to_drive_through">Destination</string>
    <string name="prompt_where_to_leave">Pick up</string>
    <string name="btn_order">Order</string>
    <string name="btn_go">Let\\\'s go</string>
    <string name="prompt_comment">Leave a comment for the driver</string>
    <string name="prompt_rate_choice">Econom; from 99 rub</string>
    <string name="prompt_time">Near</string>
    <string name="prompt_cash">Cash</string>
    <string name="prompt_comment_hint">Leave a comment</string>

</resources>
