<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home_r"
            android:title="@string/navigation_drawer_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_r"
            android:title="@string/navigation_drawer_history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_r"
            android:title="@string/navigation_drawer_profile" />
        <item
            android:id="@+id/nav_rates"
            android:icon="@drawable/ic_tariff_r"
            android:title="@string/navigation_drawer_rates" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacrts_r"
            android:title="@string/navigation_drawer_contacts" />
    </group>



</menu>
