<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scene_container" android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="18dp"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_minipin_inactive"
            android:layout_width="wrap_content"
            android:paddingEnd="26dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_map_from"
            android:text="@string/prompt_where_to_leave"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:padding="18dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_minipin_inactive"
            android:paddingEnd="26dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_map_to"
            android:text="@string/prompt_where_to_drive_through"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_map_hidden_form_part"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_econom"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!--TODO: change ruble to the font-->
            <TextView
                android:id="@+id/text_choose_a_plan"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:text="@string/prompt_rate_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="24dp"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/ic_time"
                android:layout_width="wrap_content"
                android:paddingEnd="18dp"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/prompt_time"
                android:paddingEnd="50dp"
                android:layout_gravity="center"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/ic_coin"
                android:paddingEnd="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/prompt_cash" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:maxHeight="84dp"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:minHeight="72dp"
            android:id="@+id/layout_map_add_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openCommentDialog">

            <ImageView
                android:id="@+id/image_map_quote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_quote_inactive" />

            <TextView
                android:id="@+id/text_map_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_map_quote"
                android:hint="@string/prompt_comment"
                android:layout_toRightOf="@id/image_map_quote" />
        </RelativeLayout>

        <Button
            android:background="#00BAE3"
            android:text="@string/btn_go"
            android:textColor="#FFFFFFFF"
            android:layout_width="match_parent"
            android:layout_height="72dp" />

    </LinearLayout>

</LinearLayout>